--- a/app/globals.css
+++ b/app/globals.css
@@ -75,7 +75,11 @@
     @apply border-border;
   }
 
+  html {
+    height: 100%;
+  }
   body {
+    height: 100%;
     @apply bg-background text-foreground;
     font-feature-settings: "rlig" 1, "calt" 1;
   }
